# nerfstudio_lap

./: README.md  index.html  pyproject.toml
splatfacto_lap/: method_config.py  rasterization.py  splatfacto_lap.py  splatfacto_lap_strategy.py  utils.py
