[project]
name = "nerfstudio-splatfacto-lap"
description = ""
version = "0.1.0"

dependencies = ["nerfstudio == 1.1.5", "gsplat == 1.4.0"]

[tool.setuptools.packages.find]
include = ["splatfacto_lap*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
method-template = 'splatfacto_lap.method_config:splatfacto_lap_config'
#method-template = 'method_template.template_config:method_template'
